k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: bookstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
          - path: /catalog/?(.*)
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 5002
          - path: /purchase/?(.*)
            pathType: Prefix
            backend:
              service:
                name: purchase-service
                port:
                  number: 5003
